@@ -37,6 +37,38 @@ name|hbase
 operator|.
 name|client
 operator|.
+name|HConnection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|HConnectionManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
 name|HTable
 import|;
 end_import
@@ -73,6 +105,42 @@ name|ZooKeeperWrapper
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|WatchedEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|Watcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|ZooKeeper
+import|;
+end_import
+
 begin_comment
 comment|/**  *  */
 end_comment
@@ -84,6 +152,26 @@ name|TestZooKeeper
 extends|extends
 name|HBaseClusterTestCase
 block|{
+specifier|private
+specifier|static
+class|class
+name|EmptyWatcher
+implements|implements
+name|Watcher
+block|{
+specifier|public
+name|EmptyWatcher
+parameter_list|()
+block|{}
+specifier|public
+name|void
+name|process
+parameter_list|(
+name|WatchedEvent
+name|event
+parameter_list|)
+block|{}
+block|}
 annotation|@
 name|Override
 specifier|protected
@@ -249,6 +337,144 @@ name|zooKeeper
 operator|.
 name|writeOutOfSafeMode
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * See HBASE-1232 and http://wiki.apache.org/hadoop/ZooKeeper/FAQ#4.    * @throws IOException    * @throws InterruptedException    */
+specifier|public
+name|void
+name|testClientSessionExpired
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+operator|new
+name|HTable
+argument_list|(
+name|conf
+argument_list|,
+name|HConstants
+operator|.
+name|META_TABLE_NAME
+argument_list|)
+expr_stmt|;
+name|String
+name|quorumServers
+init|=
+name|zooKeeperCluster
+operator|.
+name|getQuorumServers
+argument_list|()
+decl_stmt|;
+name|int
+name|sessionTimeout
+init|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+literal|"zookeeper.session.timeout"
+argument_list|,
+literal|2
+operator|*
+literal|1000
+argument_list|)
+decl_stmt|;
+name|Watcher
+name|watcher
+init|=
+operator|new
+name|EmptyWatcher
+argument_list|()
+decl_stmt|;
+name|HConnection
+name|connection
+init|=
+name|HConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|ZooKeeperWrapper
+name|connectionZK
+init|=
+name|connection
+operator|.
+name|getZooKeeperWrapper
+argument_list|()
+decl_stmt|;
+name|long
+name|sessionID
+init|=
+name|connectionZK
+operator|.
+name|getSessionID
+argument_list|()
+decl_stmt|;
+name|byte
+index|[]
+name|password
+init|=
+name|connectionZK
+operator|.
+name|getSessionPassword
+argument_list|()
+decl_stmt|;
+name|ZooKeeper
+name|zk
+init|=
+operator|new
+name|ZooKeeper
+argument_list|(
+name|quorumServers
+argument_list|,
+name|sessionTimeout
+argument_list|,
+name|watcher
+argument_list|,
+name|sessionID
+argument_list|,
+name|password
+argument_list|)
+decl_stmt|;
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|sessionTimeout
+operator|*
+literal|3
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"ZooKeeper should have timed out"
+argument_list|)
+expr_stmt|;
+name|connection
+operator|.
+name|relocateRegion
+argument_list|(
+name|HConstants
+operator|.
+name|ROOT_TABLE_NAME
+argument_list|,
+name|HConstants
+operator|.
+name|EMPTY_BYTE_ARRAY
 argument_list|)
 expr_stmt|;
 block|}
