@@ -66,6 +66,8 @@ Release 0.20.0 - Unreleased
    HBASE-1293  hfile doesn't recycle decompressors (Ryan Rawson via Andrew
                Purtell)
    HBASE-1150  HMsg carries safemode flag; remove (Nitay Joffe via Stack)
+   HBASE-1232  zookeeper client wont reconnect if there is a problem (Nitay
+               Joffe via Andrew Purtell)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
